# DS5Dongle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.EN.md  README.md  build.sh
.github/workflows/: README.md  build-firmware.yml  build-release.yml  build.yml  release.yml
boards/: build_waveshare_rp2350b_plus_w.sh
boards/headers/: waveshare_rp2350b_plus_w.h
cmake/: relocate_to_ram.cmake
inc/: audio.h  bluetoothPacket.h  bt.h  btstack_config.h  config.h  crc32.h  haptic_resampler.h  lerp_resampler.h  log.h  resampler.h  state.h  tusb_config.h  usb.h  utils.h  wdlResample.h
src/: audio.c  audio.cpp  audio.h  bluetoothPacket.c  bluetoothPacket.cpp  bluetooth_packet.c  bt.c  bt.cpp  bt.h  cmd.cpp  cmd.h  config.c  config.cpp  config.h  crc32.c  haptic_resampler.c  lerp_resampler.c  main.c  main.cpp  resampler.c  state.c  state_mgr.cpp  tusb_config.h  usb.c  usb.cpp  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors.h  utils.h  wake.cpp  wdlResample.cpp
tools/: build-macos.sh  build-windows.ps1  reboot_bootsel.py
